Add client behavior

--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,8 @@
 		<ul id="tasks"></ul>
 
 		<h2>Add a task</h2>
-		<form class="addTask" action="/add/task/" method="post">
-			<input type="text" name="task" class="input-task">
+		<form id="taskForm" action="/add/task/" method="post">
+			<input type="text" name="task" class="task-name">
 			<input type="submit" class="btn" value="Add">
 		</form>
 
